# trader-floor-ai-simulator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  init_db_if_empty.py  mcp_params.py  populate_db.py  pyproject.toml  railway.cron.toml  railway.json  railway.toml  requirements.txt  reset.py  run_scheduler_once.py  trading_floor.py
src/trader_floor_ai/agents/: templates.py  trader.py
src/trader_floor_ai/app/: ui.py
src/trader_floor_ai/core/: accounts.py
src/trader_floor_ai/domain/: accounts.py
src/trader_floor_ai/integration/: mcp_params.py  tools_local.py
src/trader_floor_ai/scheduler/: reset.py  run.py
src/trader_floor_ai/services/: database.py  market.py
src/trader_floor_ai/ui/: gradio_app.py
