[project]
name = "trader-floor-ai-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Minimal runtime dependencies (aligned with requirements.txt)
    "gradio>=5.47.2,<6.0.0",
    "openai>=1.68.2,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=5.24.0,<6.0.0",
    "polygon-api-client>=1.14.5,<2.0.0",
    "mcp>=1.15.0,<2.0.0",
    # python-dateutil is a transitive dependency of pandas; keep implicit.
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

# Optional expansive feature sets preserved from prior configuration.
# Install with: pip install .[full]
[project.optional-dependencies]
full = [
    "anthropic>=0.49.0",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "lxml>=5.3.1",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "openai-agents>=0.0.15",
    "playwright>=1.51.0",
    "psutil>=7.0.0",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "semantic-kernel>=1.25.0",
    "sendgrid>=6.11.0",
    "setuptools>=78.1.0",
    "smithery>=0.1.0",
    "speedtest-cli>=2.1.3",
    "wikipedia>=1.4.0",
]
